general refactoring: - updated package structure for `token` - removed unused methods - separated `literal` package with single classes