@@ -1,8 +1,11 @@
+import lexer.token.family.literal.CharLiteral;
+import lexer.token.family.literal.IdentifierLiteral;
+import lexer.token.family.literal.NumberLiteral;
+import lexer.token.family.literal.StringLiteral;
 import org.junit.jupiter.api.Test;
 import lexer.Lexer;
-import lexer.token.LiteralToken;
-import token.family.Literal;
-import token.family.Special;
+import lexer.token.type.LiteralToken;
+import lexer.token.family.Special;
 
 import static org.junit.jupiter.api.Assertions.*;
 
@@ -18,7 +21,7 @@ public class LexerEdgeCaseTest {
 
         var tokens = new Lexer("123").tokenize();
         assertEquals(2, tokens.size());
-        assertInstanceOf(Literal.NumberLiteral.class, tokens.getFirst().getType());
+        assertInstanceOf(NumberLiteral.class, tokens.getFirst().getType());
         assertEquals("123", ((LiteralToken) tokens.getFirst()).getValue());
     }
 
@@ -27,7 +30,7 @@ public class LexerEdgeCaseTest {
 
         var tokens = new Lexer("3.14").tokenize();
         assertEquals(2, tokens.size());
-        assertInstanceOf(Literal.NumberLiteral.class, tokens.getFirst().getType());
+        assertInstanceOf(NumberLiteral.class, tokens.getFirst().getType());
         assertEquals("3.14", ((LiteralToken) tokens.getFirst()).getValue());
     }
 
@@ -36,7 +39,7 @@ public class LexerEdgeCaseTest {
 
         var tokens = new Lexer("100L").tokenize();
         assertEquals(2, tokens.size());
-        assertInstanceOf(Literal.NumberLiteral.class, tokens.getFirst().getType());
+        assertInstanceOf(NumberLiteral.class, tokens.getFirst().getType());
         assertEquals("100L", ((LiteralToken) tokens.getFirst()).getValue());
     }
 
@@ -45,7 +48,7 @@ public class LexerEdgeCaseTest {
 
         var tokens = new Lexer("1.5f").tokenize();
         assertEquals(2, tokens.size());
-        assertInstanceOf(Literal.NumberLiteral.class, tokens.getFirst().getType());
+        assertInstanceOf(NumberLiteral.class, tokens.getFirst().getType());
         assertEquals("1.5f", ((LiteralToken) tokens.getFirst()).getValue());
     }
 
@@ -54,7 +57,7 @@ public class LexerEdgeCaseTest {
 
         var tokens = new Lexer("2.7d").tokenize();
         assertEquals(2, tokens.size());
-        assertInstanceOf(Literal.NumberLiteral.class, tokens.getFirst().getType());
+        assertInstanceOf(NumberLiteral.class, tokens.getFirst().getType());
         assertEquals("2.7d", ((LiteralToken) tokens.getFirst()).getValue());
     }
 
@@ -63,7 +66,7 @@ public class LexerEdgeCaseTest {
 
         var tokens = new Lexer("10b").tokenize();
         assertEquals(2, tokens.size());
-        assertInstanceOf(Literal.NumberLiteral.class, tokens.getFirst().getType());
+        assertInstanceOf(NumberLiteral.class, tokens.getFirst().getType());
         assertEquals("10b", ((LiteralToken) tokens.getFirst()).getValue());
     }
 
@@ -80,9 +83,9 @@ public class LexerEdgeCaseTest {
         // token[2] = NumberLiteral "3"
         // token[3] = EOF
         assertTrue(tokens.size() >= 3, "1.2.3 should produce at least 3 tokens");
-        assertInstanceOf(Literal.NumberLiteral.class, tokens.get(0).getType());
-        assertEquals("1.2", ((LiteralToken) tokens.get(0)).getValue(), "First token should be 1.2");
-        assertInstanceOf(Literal.NumberLiteral.class, tokens.get(tokens.size() - 2).getType());
+        assertInstanceOf(NumberLiteral.class, tokens.getFirst().getType());
+        assertEquals("1.2", ((LiteralToken) tokens.getFirst()).getValue(), "First token should be 1.2");
+        assertInstanceOf(NumberLiteral.class, tokens.get(tokens.size() - 2).getType());
     }
 
     @Test
@@ -100,7 +103,7 @@ public class LexerEdgeCaseTest {
 
         var tokens = new Lexer("'a'").tokenize();
         assertEquals(2, tokens.size());
-        assertInstanceOf(Literal.CharLiteral.class, tokens.getFirst().getType());
+        assertInstanceOf(CharLiteral.class, tokens.getFirst().getType());
     }
 
     @Test
@@ -108,7 +111,7 @@ public class LexerEdgeCaseTest {
 
         var tokens = new Lexer("'\\n'").tokenize();
         assertEquals(2, tokens.size());
-        assertInstanceOf(Literal.CharLiteral.class, tokens.getFirst().getType());
+        assertInstanceOf(CharLiteral.class, tokens.getFirst().getType());
     }
 
     /// Empty char literal '' should produce an UNKNOWN token, not throw or silently produce \0.
@@ -148,7 +151,7 @@ public class LexerEdgeCaseTest {
 
         var tokens = new Lexer("\"hello\\nworld\"").tokenize();
         assertEquals(2, tokens.size());
-        assertInstanceOf(Literal.StringLiteral.class, tokens.getFirst().getType());
+        assertInstanceOf(StringLiteral.class, tokens.getFirst().getType());
         assertTrue(((LiteralToken) tokens.getFirst()).getValue().contains("\n"));
     }
 
@@ -173,7 +176,7 @@ public class LexerEdgeCaseTest {
 
         var tokens = new Lexer("\"\"").tokenize();
         assertEquals(2, tokens.size());
-        assertInstanceOf(Literal.StringLiteral.class, tokens.getFirst().getType());
+        assertInstanceOf(StringLiteral.class, tokens.getFirst().getType());
         assertEquals("", ((LiteralToken) tokens.getFirst()).getValue());
     }
 
@@ -184,7 +187,7 @@ public class LexerEdgeCaseTest {
 
         var tokens = new Lexer("myVariable").tokenize();
         assertEquals(2, tokens.size());
-        assertInstanceOf(Literal.IdentifierLiteral.class, tokens.getFirst().getType());
+        assertInstanceOf(IdentifierLiteral.class, tokens.getFirst().getType());
         assertEquals("myVariable", ((LiteralToken) tokens.getFirst()).getValue());
     }
 
@@ -193,7 +196,7 @@ public class LexerEdgeCaseTest {
 
         var tokens = new Lexer("_my_var").tokenize();
         assertEquals(2, tokens.size());
-        assertInstanceOf(Literal.IdentifierLiteral.class, tokens.getFirst().getType());
+        assertInstanceOf(IdentifierLiteral.class, tokens.getFirst().getType());
     }
 
     @Test
@@ -201,7 +204,7 @@ public class LexerEdgeCaseTest {
 
         var tokens = new Lexer("_privateField").tokenize();
         assertEquals(2, tokens.size());
-        assertInstanceOf(Literal.IdentifierLiteral.class, tokens.getFirst().getType());
+        assertInstanceOf(IdentifierLiteral.class, tokens.getFirst().getType());
     }
 
     // ─── Comments ─────────────────────────────────────────────────────────────
@@ -211,7 +214,7 @@ public class LexerEdgeCaseTest {
 
         var tokens = new Lexer("// comment\n42").tokenize();
         assertEquals(2, tokens.size());
-        assertInstanceOf(Literal.NumberLiteral.class, tokens.getFirst().getType());
+        assertInstanceOf(NumberLiteral.class, tokens.getFirst().getType());
     }
 
     @Test
@@ -219,7 +222,7 @@ public class LexerEdgeCaseTest {
 
         var tokens = new Lexer("/* block\ncomment */42").tokenize();
         assertEquals(2, tokens.size());
-        assertInstanceOf(Literal.NumberLiteral.class, tokens.getFirst().getType());
+        assertInstanceOf(NumberLiteral.class, tokens.getFirst().getType());
     }
 
     @Test
@@ -228,7 +231,7 @@ public class LexerEdgeCaseTest {
         // Outer /* ... */ ends at the first */ — the inner /* does NOT open a nested comment
         var tokens = new Lexer("/* outer /* inner */ 42 */").tokenize();
         // After the first */, "42" and "*/" are in the token stream
-        assertTrue(tokens.stream().anyMatch(t -> t.getType() instanceof Literal.NumberLiteral),
+        assertTrue(tokens.stream().anyMatch(t -> t.getType() instanceof NumberLiteral),
                 "42 should be present after the first comment closes");
     }
 
